# localqueue

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  feedback.md  main.py  persistent_retry.py  pyproject.toml  release-please-config.json  ruff-runtime.toml  zensical.toml
.github/: SECURITY.md
.github/workflows/: benchmarks.yml  chaos.yml  ci.yml  docs.yml  quality-baseline.yml  release-candidate.yml  release-please.yml  release.yml  sonarcloud.yml  storage-compatibility.yml  stress.yml  tests.yml  wheels.yml
benchmarks/: README.md  queue_bench.py
compatibility/: README.md  baselines.toml  create_fixture.py  eventbus-dependencies.toml  policy.toml  run_matrix.py  validate_fixture.py
docs/: api.md  backpressure.md  benchmarks.md  compare.md  dead-letters.md  develop.md  diagnostics.md  event-bus.md  examples.md  getting-started.md  guarantees.md  index.md  maintenance.md  operational-envelope.md  operational-maturity.md  queues.md  release.md  retries.md  stability.md  storage-compatibility.md  typing.md  use-cases.md
docs/examples/: pull-compose.md  push-compose.md  websocket-compose.md
docs/internal/: crash-harness.md  initial_idea.md  operational-chaos.md  python-quality-contracts.md  release-gate.md
docs/plans/: guarantee-matrix.md  notification-policy-pr.md  pubsub-physical-fanout-pr.md  queue-architecture-roadmap.md
docs/use-cases/: local-outbox.md  operator-recovery.md  persistent-retries.md
examples/: basic.py  email_worker.py  enqueue_email.py  process_webhook.sh  retry_demo.py  sqlite_concurrency_benchmark.py  sqlite_process_harness.py  typed_payload.py
examples/docker-compose/: README.md
localqueue/: __init__.py  adapters.py  cli.py  cli_commands.py  cli_support.py  cli_worker_commands.py  failure.py  paths.py  policies.py  queue.py  spec.py  store.py  worker.py
localqueue/adapters/: __init__.py  dispatch.py  notification.py  threaded.py
localqueue/cli/: __init__.py  commands.py  support.py  worker.py
localqueue/idempotency/: __init__.py
localqueue/policies/: __init__.py  _types.py  acknowledgement.py  backpressure.py  commit.py  consumption.py  dead_letter.py  deduplication.py  delivery.py  dispatch.py  lease.py  locality.py  notification.py  ordering.py  policy_set.py  results.py  routing.py  semantics.py  subscriptions.py
localqueue/queues/: __init__.py  core.py  policies.py  puts.py  timing.py  validation.py
localqueue/results/: __init__.py
persistentqueue/: __init__.py  queue.py  store.py  worker.py
persistentretry/: __init__.py  cli.py  core.py  store.py
python/simpleq/: core.py  (+4 more)
release/: claims-policy.json  dependency-policy.json  evidence-manifest.schema.json  release-notes-template.md  required-evidence.json
release-notes/: v1.2.0.md
release_gate/: __init__.py  artifacts.py  audits.py  cli.py  identity.py  manifest.py  markdown.py  preparation.py  promotion.py  release_notes.py  reports.py  schema.py  simulation.py  subject.py
scripts/: check_negative_typing.py  check_release_version.py  run_crash_campaign.py  smoke_installed_wheel.py  validate_cpython_paths.py  validate_manylinux_cpython.sh
src/: backup.rs  diagnostics.rs  error.rs  failpoints.rs  integrity.rs  lib.rs  queue.rs  schema.rs  storage.rs
stress/: run_chaos.py  run_soak.py
tasks/: plan.md  todo.md
tests/: crash_harness.py  test_backpressure.py  test_backup.py  test_batch.py  test_benchmark_report.py  test_bus.py  test_bus_concurrency.py  test_bus_static_topology.py  test_bus_timeout.py  test_bus_topology.py  test_chaos.py  test_cli.py  test_compatibility_harness.py  test_compatibility_policy.py  test_concurrency.py  test_contract.py  test_core.py  test_crash_recovery.py  test_deadletter.py  test_diagnostics.py  test_event_causality.py  test_gil.py  test_integrity.py  test_maintenance.py  test_multiprocess_benchmark.py  test_operational_envelope_docs.py  test_persistentqueue.py  test_persistentretry.py  test_policies.py  test_process_harness.py  test_queue.py  test_release_documentation.py  test_release_gate.py  test_retry.py  test_soak.py  test_state_machine.py  test_wheel_isolation.py  test_worker.py
typing_tests/: negative.py  positive.py
(+108 files in other folders)
