[project]
name = "simpleq"
version = "0.1.0"
description = "Fila persistente local em SQLite com ACK, lease e retry."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "maturin>=1.14",
]

[build-system]
requires = ["maturin>=1.14"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
