[project]
name = "localqueue"
version = "1.1.0"
description = "A persistent, multiprocess-safe local queue for Python, backed by SQLite and Rust."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/brunoportis/localqueue"
Repository = "https://github.com/brunoportis/localqueue"
Issues = "https://github.com/brunoportis/localqueue/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "maturin>=1.14",
    "pydantic>=2,<3",
]
benchmark = [
    "persist-queue==1.1.0",
]
bus = [
    "pydantic>=2,<3",
]

[build-system]
requires = ["maturin>=1.14"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
